# fann-sys-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
scripts/: travis-doc-upload.cfg
src/: ffi.rs  lib.rs
