[package]
name = "fann-sys"
version = "0.1.2"
authors = ["Andreas Fackler <AndreasFackler@gmx.de>"]
license = "LGPL-3.0"
documentation = "https://afck.github.io/docs/fann-sys-rs/fann_sys"
repository = "https://github.com/afck/fann-sys-rs"
readme = "README.md"
description = """
Low-level bindings to the Fast Artificial Neural Networks library
"""
keywords = ["neural", "network", "fann"]

[dependencies]
libc = "0.1.8"
